# data-mine-bot

./: .gitignore  main.py  pyproject.toml
csv/: Customer_Behaviour_rus.csv
src/: handlers.py  keyboards.py  utils.py
src/states/: classification.py  clustering.py
